<resources>

    <string name="action_settings">Settings</string>
    <string name="App_Name">Multi Player Game by Kamran</string>
    <string name="Main_Title">Plane Wars</string>
    <string name="Game_Continue">Continue</string>
    <string name="About_Game">About</string>
    <string name="Exit_Game">Exit</string>
    <string name="New_Game">New Game</string>
    <string name="Multi_Player">Multi Player</string>
    <string name="High_Score">High Scores</string>

    <color name="Background_Color">#3500ffff</color>

    <string name="About_Game_Text">This is a Multiplayer game and you can play...</string>
    <string name="About_Game_Title">About The Game</string>
    <string name="title_activity_new_game">NewGame</string>

</resources>
