<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Background_Color"
    android:padding="30dip"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kamran.multiplayergame.MainActivity"
    tools:showIn="@layout/activity_main">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/App_Name"
          android:layout_gravity="center"
          android:textSize="26.5sp"
          android:layout_marginBottom="25dip"

     ></TextView>
    <Button
        android:id="@+id/aBoutGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/About_Game" />
    <Button
        android:id="@+id/NewGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/New_Game" />
    <Button
        android:id="@+id/MultiPlayerGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Multi_Player" />
    <Button
        android:id="@+id/Continue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Game_Continue" />
    <Button
        android:id="@+id/ExitGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Exit_Game" />

</LinearLayout>
    </LinearLayout>
